first modifications for ulm.dev

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,15 +3,18 @@ To modify the menu system, you are welcome to edit this HTML directly or you can
 where we provide an easy way to manage your navigation system
 {% endcomment %}
 
-<header class="usa-header usa-header--extended" role="banner">
-  <div class="usa-navbar">
-    <div class="usa-logo" id="extended-logo">
-      <em class="usa-logo__text"><a href="{{site.baseurl}}" title="Home" aria-label="Home">{{site.title}}</a></em>
+<header class="usa-header usa-header--basic" role="banner">
+  <div class="usa-nav-container">
+    <div class="usa-navbar">
+      <div class="usa-logo" id="extended-logo">
+        <a href="{{site.baseurl}}/" title="Home" aria-label="Home">
+          <img class="logo-img" src="/assets/images/logo.png" alt="ulm">
+          <em class="usa-logo__text">{{site.title}}</em>
+        </a>
+      </div>
+      <button class="usa-menu-btn">Menu</button>
     </div>
-    <button class="usa-menu-btn">Menu</button>
-  </div>
-  <nav role="navigation" class="usa-nav">
-    <div class="usa-nav__inner">
+    <nav role="navigation" class="usa-nav">
       <button class="usa-nav__close"><img src="{{ site.baseurl }}/assets/uswds/img/close.svg" alt="close"></button>
       <ul class="usa-nav__primary usa-accordion">
         {% for nav_item in include.primary_navigation %}
@@ -36,16 +39,6 @@ where we provide an easy way to manage your navigation system
         {% endunless %}
         {% endfor %}
       </ul>
-      <div class="usa-nav__secondary">
-        <ul class="usa-nav__secondary-links">
-          {% for nav_item in include.secondary_navigation %}
-          <li class="usa-nav__secondary-item">
-            <a href="{{ nav_item.url | prepend: site.baseurl }}">{{ nav_item.name | escape }}</a>
-          </li>
-          {% endfor %}
-        </ul>
-        {% include searchgov/form.html affiliate=site.searchgov.affiliate %}
-      </div>
-    </div>
-  </nav>
+    </nav>
+  </div>
 </header>
