--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,24 +4,22 @@
       <div class="grid-row padding-3">
         <div class="tablet:grid-col" >
           <div class="logo-links">
-            <a class="footer-logo media_link" href="https://18f.gsa.gov">
-              <img src="{{ site.baseurl }}/assets/uswds/img/logo-img.png" width="50" alt="Ageny logo" />
+            <a class="footer-logo media_link" href="https://www.ulm.de/leben-in-ulm/digitale-stadt">
+              <img src="{{ site.baseurl }}/assets/images/zda-logo.svg" width="100" alt="Stadt Ulm, Z/DA" />
             </a>
           </div>
         </div>
         <div class="tablet:grid-col"></div>
         <div class="tablet:grid-col">
           <ul class="add-list-reset">
-            <li>Footer link</li>
-            <li>Footer link</li>
-            <li>Footer link</li>
+            <li><a href="https://www.ulm.de/leben-in-ulm/digitale-stadt">Digitale Agenda</a></li>
+            <li><a href="https://github.com/stadtulm">GitHub</a></li>
           </ul>
         </div>
         <div class="tablet:grid-col">
           <ul class="add-list-reset">
-            <li>Footer link</li>
-            <li>Footer link</li>
-            <li>Footer link</li>
+            <li><a href="https://www.ulm.de/sonderseiten/datenschutzerklaerung">Datenschutz</a></li>
+            <li><a href="https://www.ulm.de/sonderseiten/impressum">Impressum</a></li>
           </ul>
         </div>
       </div>
@@ -29,29 +27,7 @@
   </div>
 </footer>
 
-<!-- Digital Analytics Program roll-up, see https://analytics.usa.gov for data -->
-<script id="_fed_an_ua_tag" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency={{site.dap_agency}}"></script>
-
-<!-- Google Analytics -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', '{{site.google_analytics_ua}}', '{{site.url}}');
-
-  // anonymize user IPs (chops off the last IP triplet)
-  ga('set', 'anonymizeIp', true);
-
-  // forces SSL even if the page were somehow loaded over http://
-  ga('set', 'forceSSL', true);
-
-  ga('send', 'pageview');
-</script>
-
 <script src="{{site.baseurl}}/assets/uswds/js/uswds.min.js"></script>
-
-{% include searchgov/script.html affiliate=site.searchgov_affiliate %}
 
 </body>
 </html>
