--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -5,10 +5,10 @@ This will be displayed on the homepage. Ideally, you want to highlight key goals
 <section class="usa-hero">
   <div class="grid-container">
     <div class="usa-hero__callout">
-      <h2 class="usa-hero__heading"><span class="usa-hero__heading--alt">Hero callout:</span>Bring attention to a project priority
+      <h2 class="usa-hero__heading"><span class="usa-hero__heading--alt">OpenBike</span> Bikesharing-Test mit Stadt-Beschäftigten
       </h2>
-      <p>Support the callout with some short explanatory text. You don’t need more than a couple of sentences.</p>
-      <a class="usa-button" href="javascript:void(0)">Call to action</a>
+      <p>Wir entwickeln ein freies, offenes Bikesharingsystem. Der erste Test mit Beschäftigten der Stadt Ulm läuft nun.</p>
+      <a class="usa-button" href="/projects/openbike/">Mehr erfahren</a>
     </div>
   </div>
 </section>
