--- a/_includes/highlights.html
+++ b/_includes/highlights.html
@@ -7,33 +7,17 @@ Use this section to highlight key elements of your site. Some sites will only ha
   <div class="grid-container">
     <div class="usa-graphic-list__row grid-row grid-gap">
       <div class="usa-media-block tablet:grid-col">
-        <img class="usa-media-block__img"  src="{{ site.baseurl }}/assets/uswds/img/circle-124.png" alt="Alt text">
+        <img class="usa-media-block__img"  src="{{ site.baseurl }}/assets/images/openbike-circle.svg" alt="openbike icon">
         <div class="usa-media-block__body">
-          <h3 class="usa-graphic-list__heading">Graphic headings can vary.</h3>
-          <p>Graphic headings can be used a few different ways, depending on what your landing page is for. Highlight your values, specific program areas, or results.</p>
+          <h3 class="usa-graphic-list__heading"><a href="/projects/openbike/">OpenBike</a></h3>
+          <p>Freie, Open Source Software für Bikesharing, vom Schloss bis zur Verwaltungsoberfläche. Nutzerzentriert entwickelt, gemeinsam mit Beschäftigten der Stadt Ulm.</p>
         </div>
       </div>
       <div class="usa-media-block tablet:grid-col">
-        <img class="usa-media-block__img"  src="{{ site.baseurl }}/assets/uswds/img/circle-124.png" alt="Alt text">
+        <img class="usa-media-block__img"  src="{{ site.baseurl }}/assets/images/digitransit-circle.png" alt="ulmrouting icon">
         <div class="usa-media-block__body">
-          <h3 class="usa-graphic-list__heading">Stick to 6 or fewer words.</h3>
-          <p>Keep body text to about 30 words. They can be shorter, but try to be somewhat balanced across all four. It creates a clean appearance with good spacing.</p>
-        </div>
-      </div>
-    </div>
-    <div class="usa-graphic-list__row grid-row grid-gap">
-      <div class="usa-media-block tablet:grid-col">
-        <img class="usa-media-block__img"  src="{{ site.baseurl }}/assets/uswds/img/circle-124.png" alt="Alt text">
-        <div class="usa-media-block__body">
-          <h3 class="usa-graphic-list__heading">Never highlight anything without a goal.</h3>
-          <p>For anything you want to highlight here, understand what your users know now, and what activity or impression you want from them after they see it.</p>
-        </div>
-      </div>
-      <div class="usa-media-block tablet:grid-col">
-        <img class="usa-media-block__img"  src="{{ site.baseurl }}/assets/uswds/img/circle-124.png" alt="Alt text">
-        <div class="usa-media-block__body">
-          <h3 class="usa-graphic-list__heading">Could also have 2 or 6.</h3>
-          <p>In addition to your goal, find out your users’ goals. What do they want to know or do that supports your mission? Use these headings to show those.</p>
+          <h3 class="usa-graphic-list__heading"><a href="/projects/digitransit/">digitransit</a></h3>
+          <p>Multimodales Routing, mit möglichst vielen Mobilitätsangeboten in der Stadt - basierend auf offenen Daten und als Teil einer Entwickelndencommunity.</p>
         </div>
       </div>
     </div>
