--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -38,3 +38,54 @@
     display: block;
   }
 }
+
+.logo-img {
+  height: 2rem;
+  margin-right: .8rem;
+  vertical-align: bottom;
+}
+
+.usa-header-basic .logo-img {
+  height: 2.7rem;
+}
+
+@media screen and (min-width: 951px) {
+  .logo-img {
+    margin-top: .8rem;
+    height: 3rem;
+  }
+}
+
+.usa-logo__text {
+  display: inline-block;
+}
+
+.usa-graphic-list__heading a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/*
+.usa-header {
+  .usa-logo {
+    .usa-logo-img {
+      float: left;
+      height: 1.5rem;
+      margin-top: 1.25rem;
+      margin-right: 0.25rem;
+
+      & + .usa-logo-text {
+        float: left;
+      }
+    }
+  }
+
+  &.usa-header--extended .usa-logo-img {
+      height: 3.2rem;
+  }
+}
+*/
+
+.usa-hero {
+  background-image: url('../images/openbike-hero.jpg');
+}
