--- a/_includes/tagline.html
+++ b/_includes/tagline.html
@@ -8,8 +8,7 @@ This tagline will appear in your homepage
       <h2 class="font-heading-xl margin-top-0 tablet:margin-bottom-0">Stadt gestalten. Nachhaltig und Open Source</h2>
     </div>
     <div class="tablet:grid-col-8 usa-prose">
-      <p><strong>FIXME</strong> The tagline should inspire confidence and interest, focusing on the value that your overall approach offers to your audience. Use a heading typeface and keep your tagline to just a few words, and don’t confuse or mystify.</p>
-      <p>Use the right side of the grid to explain the tagline a bit more. What are your goals? How do you do your work? Write in the present tense, and stay brief here. People who are interested can find details on internal pages.</p>
+      <p>Wir entwickeln Open Source Software von der Stadt, für die Stadt. Mit klarem Bekenntnis zu offenen Daten und offenen, standardisierten Schnittstellen &mdash; sodass es nicht nur gut für Ulm ist, sondern auch nachnutzbar in jeder Kommune.</p>
     </div>
   </div>
 </section>
