introducing: localized dates

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ This is used in blog posts. The index page can be found at blog/index.html
     <h1 class="title">{{page.title}}</h1>
     <div class="text-base margin-bottom-2">
         <div class="margin-top-neg-105">
-          By <span class="text-bold">{{ page.author }}</span> · {{ page.date | date: '%B %d, %Y' }}
+          By <span class="text-bold">{{ page.author }}</span> · {{ page.date | localize: '%d. %B %Y' }}
         </div>
       </div>
     {{ content }}
