link project icons on home

--- a/_includes/highlights.html
+++ b/_includes/highlights.html
@@ -7,14 +7,14 @@ Use this section to highlight key elements of your site. Some sites will only ha
   <div class="grid-container">
     <div class="usa-graphic-list__row grid-row grid-gap">
       <div class="usa-media-block tablet:grid-col">
-        <img class="usa-media-block__img"  src="{{ site.baseurl }}/assets/images/openbike-circle.svg" alt="openbike icon">
+        <a href="/projects/openbike/" class="usa-media-block__img"><img src="{{ site.baseurl }}/assets/images/openbike-circle.svg" alt="openbike icon"></a>
         <div class="usa-media-block__body">
           <h3 class="usa-graphic-list__heading"><a href="/projects/openbike/">OpenBike</a></h3>
           <p>Freie, Open Source Software für Bikesharing, vom Schloss bis zur Verwaltungsoberfläche. Nutzerzentriert entwickelt, gemeinsam mit Beschäftigten der Stadt Ulm.</p>
         </div>
       </div>
       <div class="usa-media-block tablet:grid-col">
-        <img class="usa-media-block__img"  src="{{ site.baseurl }}/assets/images/digitransit-circle.png" alt="ulmrouting icon">
+        <a href="/projects/digitransit/" class="usa-media-block__img"><img src="{{ site.baseurl }}/assets/images/digitransit-circle.png" alt="ulmrouting icon"></a>
         <div class="usa-media-block__body">
           <h3 class="usa-graphic-list__heading"><a href="/projects/digitransit/">digitransit</a></h3>
           <p>Multimodales Routing, mit möglichst vielen Mobilitätsangeboten in der Stadt - basierend auf offenen Daten und als Teil einer Entwickelndencommunity.</p>
