kleiner Hinweisbanner auf die OpenBike konferenz

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -89,3 +89,16 @@
 .usa-hero {
   background-image: url('../images/openbike-hero.jpg');
 }
+
+.save-the-date-banner {
+  background: #1D3759;
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.save-the-date-banner a {
+  color: white;
+}
