--- a/_includes/tagline.html
+++ b/_includes/tagline.html
@@ -2,6 +2,11 @@
 This tagline will appear in your homepage
 {% endcomment %}
 
+<section class="grid-container usa-prose">
+	<div class="save-the-date-banner">
+		Save the Date: 7. und 8. August: <a href="https://ulm.dev/2020/06/30/minikonferenz/">OpenBike-Minikonferenz</a>
+	</div>
+</section>
 <section class="grid-container usa-section usa-prose">
   <div class="grid-row grid-gap">
     <div class="tablet:grid-col-4">
