Anmeldung auch auf startseite eröffent

--- a/_includes/tagline.html
+++ b/_includes/tagline.html
@@ -4,7 +4,7 @@ This tagline will appear in your homepage
 
 <section class="grid-container usa-prose">
 	<div class="save-the-date-banner">
-		Save the Date: 7. und 8. August: <a href="https://ulm.dev/2020/06/30/minikonferenz/">OpenBike-Minikonferenz</a>
+		Jetzt anmelden: 7. und 8. August: <a href="https://ulm.dev/2020/06/30/minikonferenz/">OpenBike-Minikonferenz</a>
 	</div>
 </section>
 <section class="grid-container usa-section usa-prose">
