--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -93,10 +93,11 @@
 .save-the-date-banner {
   background: #1D3759;
   color: white;
-  font-size: 20px;
+  font-size: 30px;
   text-align: center;
   padding-top: 5px;
   padding-bottom: 5px;
+  line-height: 300%;
 }
 
 .save-the-date-banner a {
