Absatz zur Verlinkung zum blog hinzugefügt

--- a/_includes/tagline.html
+++ b/_includes/tagline.html
@@ -10,10 +10,18 @@ This tagline will appear in your homepage
 <section class="grid-container usa-section usa-prose">
   <div class="grid-row grid-gap">
     <div class="tablet:grid-col-4">
-      <h2 class="font-heading-xl margin-top-0 tablet:margin-bottom-0">Stadt gestalten. Nachhaltig und Open Source</h2>
+      <h2 class="font-heading-xl margin-top-0 tablet:margin-bottom-6">Stadt gestalten. Nachhaltig und Open Source</h2>
     </div>
     <div class="tablet:grid-col-8 usa-prose">
       <p>Wir entwickeln Open Source Software von der Stadt, für die Stadt. Mit klarem Bekenntnis zu offenen Daten und offenen, standardisierten Schnittstellen &mdash; sodass es nicht nur gut für Ulm ist, sondern auch nachnutzbar in jeder Kommune.</p>
+    </div>
+  </div>
+  <div class="grid-row grid-gap">
+    <div class="tablet:grid-col-4">
+      <h2 class="font-heading-xl margin-top-0 tablet:margin-bottom-0">Erfahrungen und Ideen austauschen</h2>
+    </div>
+    <div class="tablet:grid-col-8 usa-prose">
+      <p>Wir möchten alle an unseren Erfahrungen, Fehlern und Erkenntnissen teil haben lassen. Wir berichten in unserem <b><a href="/blog">Blog</a></b> über den Stand unserer Projekte, und schreiben Artikel um allen unsere Ideen nahe zu bringen und sie zu ermutigen die Projekte nachzumachen oder mitzumachen.</p>
     </div>
   </div>
 </section>
